Descripción de los cambios realizados